--- a/comper/src/index.css
+++ b/comper/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: rgb(238, 238, 238);
+  margin-top: 120px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  background-color: white;
+  color: black;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  left: 0;
+  top: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+nav > img{
+  width: 150px;
+}
+nav > ul{
+  text-decoration: none;
+  width: fit-content;
+  margin-left: 40%;
+  font-size: 20px;
+  margin-right: 0;
+  padding: 0;
+  font-weight: 600;
+  cursor: pointer;
+}
+nav > ul > li{
+  display: inline-block;
+  padding: 20px;
+  transition: all .4s;
+  -webkit-transition: all .4s;
+  -moz-transition: all .4s;
+  -ms-transition: all .4s;
+  -o-transition: all .4s;
+}
+nav > ul > li:hover{
+  color: white;
+  background-color: black;
+}
+.ctnTheme{
+  display: grid;
+  grid-template: "a b"
+                 "a c";
+                 justify-content: center;
+}
+.ctnTheme > div{
+  background-color: red;
+  margin: 10px;
+}
+.profilCompetence{
+  grid-area: a;
+  width: 700px;
+  height: 820px;
+}
+.themeInteret{
+  grid-area: b;
+  width: 500px;
+  height: 400px;
+}
+.recommendation{
+  grid-area: c;
+  width: 500px;
+  height: 400px;
 }
